<resources>
    <string name="app_name">IoT</string>

    <string name="button_01">Control 01</string>
    <string name="button_02">Control 02</string>
    <string name="button_03">Control 03</string>

    <string name="font_h1">H1 Headline</string>
    <string name="font_h2">H2 Headline</string>
    <string name="font_h3">H3 Headline</string>
    <string name="font_h4">H4 Headline</string>
    <string name="font_h5">H5 Headline</string>
    <string name="font_h6">H6 Headline</string>
    <string name="font_subtitle1">Subtitle 1</string>
    <string name="font_subtitle2">Subtitle 2</string>
    <string name="font_body1">Body 1</string>
    <string name="font_body2">Body 2</string>
    <string name="font_button">Button</string>
    <string name="font_caption">Caption</string>
    <string name="font_overline">Overline</string>
    <string name="scenes_title">Scenes ></string>
    <string name="no_devices">No devices</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
