<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Headline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_h1"/>

        <TextView
            style="@style/Headline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_h2"/>

        <TextView
            style="@style/Headline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_h3"/>

        <TextView
            style="@style/Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_h4"/>

        <TextView
            style="@style/Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_h5"/>

        <TextView
            style="@style/Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_h6"/>

        <TextView
            style="@style/Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_subtitle1"/>

        <TextView
            style="@style/Subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_subtitle2"/>

        <TextView
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_body1"/>

        <TextView
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_body2"/>

        <TextView
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_button"/>

        <TextView
            style="@style/Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_caption"/>

        <TextView
            style="@style/Overline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_overline"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
